--- a/about.html
+++ b/about.html
@@ -1,1 +1,33 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>About</title>
+    <style>
+        html{
+    background-color: rgb(235, 222, 200);
+}
+        h1{
+            font-size: 18px;
+        }
+    </style>
+</head>
+<body>
+   <article>
+  <h2>About This Blog</h2>
+  <p>
+    Hi, I'm Laraib Kanwal — a computer science student and self-taught anime artist. I started this blog to share my personal journey of learning how to draw anime from scratch. Drawing has always been something I admired in anime shows, but I never imagined I’d be able to create my own characters and expressions.
+  </p>
 
+  <p>
+    On this blog, you’ll find beginner-friendly tips, my favorite drawing tools, practice routines, and sketches from my improvement journey. I also talk about challenges I face and how I overcome them, so that other aspiring artists like you can learn and grow with me.
+  </p>
+
+  <p>
+    Whether you're just starting out or already love anime art, I hope this blog inspires you to pick up a pencil (or tablet!) and draw what you love.
+  </p>
+</article>
+
+</body>
+</html>
