--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <h1> My Blog </h1>
         <nav>
             <ul>
-                <li> <a href="#"> Home </a></li>
+                <li> <a href=" "> Home </a></li>
                   <li> <a href="#"> Contact </a></li>
-                    <li> <a href="#"> About Me </a></li>
+                    <li> <a href="https://github.com/laraibkanwal19/My-anime-blog/commit/95fb4e2998b009c5998681c0674ae45ff6ee6f73"> About Me </a></li>
             </ul>
         </nav>
     </header>
@@ -201,4 +201,5 @@
     </footer>
 
 </body>
+
 </html>
