--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <ul>
                 <li> <a href=" "> Home </a></li>
                   <li> <a href="#"> Contact </a></li>
-                    <li> <a href="https://github.com/laraibkanwal19/My-anime-blog/commit/95fb4e2998b009c5998681c0674ae45ff6ee6f73"> About Me </a></li>
+                    <li> <a href="/https://github.com/laraibkanwal19/My-anime-blog/commit/95fb4e2998b009c5998681c0674ae45ff6ee6f73"> About Me </a></li>
             </ul>
         </nav>
     </header>
@@ -203,3 +203,4 @@
 </body>
 
 </html>
+
