--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <ul>
                 <li> <a href=" "> Home </a></li>
                   <li> <a href="#"> Contact </a></li>
-                    <li><a href="about.html">About Me</a></li>
+                    <li><a href="\about.html">About Me</a></li>
 
             </ul>
         </nav>
@@ -187,7 +187,7 @@
 </article>
 <article>
     <p><strong>Sketch of a sad anime face</strong> </p>
-    <img src="\WEBSITES\Blog Layout\anime-eyes1.png " alt="My sketch of a sad anime face">
+    <img src="\anime-eyes1.png " alt="My sketch of a sad anime face">
     <p>This is the sketch of a sad anime face that I used to create my website. You can find the link to the website below.</p>
 </article>
 <div class="link-box">
@@ -204,5 +204,6 @@
 </body>
 
 </html>
+
 
 
