--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <ul>
                 <li> <a href=" "> Home </a></li>
                   <li> <a href="#"> Contact </a></li>
-                    <li><a href="\about.html">About Me</a></li>
+                    <li><a href="about.html">About Me</a></li>
 
             </ul>
         </nav>
@@ -204,6 +204,7 @@
 </body>
 
 </html>
+
 
 
 
