--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 </article>
 <article>
     <p><strong>Sketch of a sad anime face</strong> </p>
-    <img src="\anime-eyes1.png " alt="My sketch of a sad anime face">
+    <img src="anime-eyes1.png " alt="My sketch of a sad anime face">
     <p>This is the sketch of a sad anime face that I used to create my website. You can find the link to the website below.</p>
 </article>
 <div class="link-box">
@@ -204,6 +204,7 @@
 </body>
 
 </html>
+
 
 
 
