--- a/contact.html
+++ b/contact.html
@@ -1,1 +1,31 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>contact</title>
+    <style>
+        body{
+            background-color: burlywood;
+        }
+        #contact-details{
+            color: black;
+            background-color: beige;
+        }
+        #information{
+            color: black;
 
+        }
+        #number{
+            color: black;
+        }
+
+    </style>
+</head>
+<body>
+    <h1 id="contact-details">My contact details</h1>
+    <p id="informtion">This is my contact number</p>
+    <p id="number"> 03136756667</p>
+    
+</body>
+</html>
