--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
     </style>
 </head>
 <body>
-    <h1 id="contact-details">My contact details</h1>
+    <h1 id="contact-details">My contact details...................</h1>
     <p id="informtion">This is my contact number</p>
     <p id="number"> 03136756667</p>
     
