--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <nav>
             <ul>
                 <li> <a href=" "> Home </a></li>
-                  <li> <a href="contact.html"> Contact Me</a></li>
+                  <li> <a href="about.html"> Contact Me</a></li>
                     <li><a href="about.html">About Me</a></li>
 
             </ul>
@@ -204,6 +204,7 @@
 </body>
 
 </html>
+
 
 
 
