--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <title>contact</title>
     <style>
         body{
-            background-color: burlywood;
+            background-color: rgb(194, 166, 140);
         }
         #contact-details{
             color: black;
@@ -26,6 +26,9 @@
     <h1 id="contact-details">My contact details...................</h1>
     <p id="informtion">This is my contact number</p>
     <p id="number"> 03136756667</p>
+    <p id="informtion">This is my Email</p>
+        <p id="Email"> laraibkan73@gmail.com</p>
+
     
 </body>
 </html>
