--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
         }
         #contact-details{
             color: black;
-            background-color: beige;
+            background-color: rgb(245, 245, 240);;
         }
         #information{
             color: black;
