--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
     <p>This is the sketch of a sad anime face that I used to create my website. You can find the link to the website below.</p>
 </article>
 <div class="link-box">
-  <a href="http://127.0.0.1:5500/WEBSITES/Anime%20Expressions/index.html" target="_blank">
+  <a href="https://laraibkanwal19.github.io/anime-expressions/" target="_blank">
     Click this link to open the website
   </a>
 </div>
@@ -204,6 +204,7 @@
 </body>
 
 </html>
+
 
 
 
